--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,13 @@
+/* html {
+  background-color: black;
+} */
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  max-width: 800px;
+  max-width: 1400px;
+  padding: 15px;
   margin: auto;
 }
