--- a/public/global.css
+++ b/public/global.css
@@ -30,38 +30,16 @@ body {
   color: rgb(179, 176, 176);
 }
 
-.skeleton-box {
-  height: 100%;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  background-color: #333;
-  width: 100%;
-  z-index: 999;
+.in-content-1 .card {
+  min-height: 100%;
 }
 
-.skeleton-box::after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  transform: translateX(-100%);
-  animation: shimmer 3s infinite;
-  content: "";
-  background-image: linear-gradient(
-    90deg,
-    rgba(163, 163, 163, 0.5) 0,
-    rgba(163, 163, 163, 0.7) 20%,
-    rgba(163, 163, 163, 0.8) 60%,
-    rgba(163, 163, 163, 0)
-  );
+.in-content-1 .card {
+  height: 350px;
 }
 
-@keyframes shimmer {
-  100% {
-    transform: translateX(100%);
+@media (min-width: 992px) {
+  .in-content-1 .card {
+    height: auto;
   }
 }
