adding live data

--- a/public/global.css
+++ b/public/global.css
@@ -37,3 +37,17 @@ body {
 .in-content-1 .card {
   min-height: 350px;
 }
+
+.select-box-theme {
+  --borderRadius: 0;
+  --placeholderColor: rgba(179, 176, 176, 0.35);
+  --background: transparent;
+  --inputColor: var(--grey);
+  --border: 1px solid var(--grey);
+  --listBackground: black;
+  --listBorderRadius: 0;
+  --itemIsActiveBG: rgb(0, 186, 230);
+  --itemHoverBG: rgb(22, 69, 82);
+  --listShadow: 0 0 1px 1px var(--grey);
+  --itemFirstBorderRadius: 0;
+}
